k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy: {}
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: redis
        name: redis
        args: ["--requirepass", "$(REDIS_PASSWORD)"]
        resources: 
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 256Mi
            cpu: 200m
        volumeMounts:
          - name: redis
            mountPath: /redis
      volumes:
        - name: redis
          persistentVolumeClaim:
            claimName: redis-pvc
