k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: flask
  namespace: practica
spec:
  rules:
  - host: rubenmgx.34.77.250.116.nip.io
    http:
      paths:
      - backend:
          serviceName: flask
          servicePort: 5000
